--- a/css/style.css
+++ b/css/style.css
@@ -6,3 +6,48 @@ Medium green: #55c57a
 Dark green: #28b485
 
 */
+
+/* Basic Reset
+    - Normalize that CSS in order to make a cross-browser reset.
+    - So in order to make every browser render the pages in the exact same way.
+    - Reset using universal selector.
+*/
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; /* border-box includes padding and border in the width and height of an element. */
+}
+
+/* Set Overall font properties on the entire web page
+    - properties related to fonts, such as font-family, font-size, line-height, etc. are usually inherited from the body element.
+*/
+body {
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.7; /* this is a unitless number that represents the line-height as a multiple of the font-size. */
+  color: #777; /* color of the text */
+  padding: 3rem; /* this is a shorthand property that sets the padding for all four sides of an element at once. rem means */
+}
+
+.header {
+  height: 95vh; /* vh is a unit that represents 1% of the viewport height. */
+  background-image: linear-gradient(
+      to right bottom,
+      hsla(111, 55%, 64%, 0.8),
+      hsla(160, 64%, 43%, 0.8)
+    ),
+    url(../img/hero.jpg);
+  background-size: cover;
+  background-position: top center;
+
+  clip-path: polygon(
+    0 0,
+    100% 0,
+    100% 75vh,
+    0 100%
+  ); /* 
+  clip-path is a CSS property that allows you to define a custom shape for an element. 
+    - polygon functions needs a list of points (coordinates) that define the shape of the polygon. clockwise order.
+  */
+}
