--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,9 @@ body {
 .heading-primary {
   color: #fff;
   text-transform: uppercase;
+
+  /* this property determines if the back part of an element, when we transform it, is visible or hidden. */
+  backface-visibility: hidden;
 }
 
 .heading-primary-main {
@@ -82,6 +85,18 @@ body {
   font-size: 60px;
   font-weight: 400;
   letter-spacing: 36px;
+
+  /* 
+  animation-name: moveInLeft;
+  animation-duration: 1s;
+  animation-timing-function: ease-out; how the time tof the animation goes 
+  */
+  animation: moveInLeft 1s ease-out;
+  /* 
+   
+  animation-delay: 3s; animation executed 3 times
+  animation-iteration-count: 3; wait 3 seconds and then Start!
+  */
 }
 
 .heading-primary-sub {
@@ -89,4 +104,68 @@ body {
   font-size: 20px;
   font-weight: 700;
   letter-spacing: 17.8px;
+
+  animation: moveInRight 1s ease-out; /* Shortened animation line*/
+}
+
+/* Animations */
+/* For the browser performance, it's the best to only ever animate
+  2 different properties Opacity and Transform.
+*/
+@keyframes moveInLeft {
+  /* In HERE, I can specify what I want to happen 
+     in each moment of time of the animation 
+  */
+
+  /* BEFORE ANIMATION STARTS */
+  0% {
+    opacity: 0; /* make it invisible */
+    transform: translateX(-100px); /* animate from left to right */
+  }
+
+  80% {
+    opacity: 1; /* gradually make it visible as it moves in */
+    transform: translateX(10px); /* add a slight overshoot effect */
+  }
+  /* AFTER ANIMATIONS FINISHES */
+  100% {
+    opacity: 1; /* make it visible */
+    transform: translate(0);
+  }
+}
+
+@keyframes moveInRight {
+  0% {
+    opacity: 0;
+    transform: translateX(100px);
+  }
+
+  80% {
+    opacity: 1;
+    transform: translateX(-10px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
+}
+
+/* :link is a pseudo-class. A pseudo-class is a special state of a selector 
+  So we pseudo-classes to style elements under special conditions. 
+*/
+.btn:link,
+.btn:visited {
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 15px 40px; /*top,bottom  right,left*/
+
+  /* this way, the box model works on this element as if it was just a normal block element. 
+  we do inline when we do some padding or margin*/
+  display: inline-block;
+}
+
+.btn-white {
+  background-color: #fff;
+  color: #777;
 }
